# A-P-T

./: .env.example  .gitignore  CLEANUP_SUMMARY.md  COMPREHENSIVE_TEST_REPORT.md  CONFIG_GUIDE.md  FIXME.md  FRONTEND_TEST_REPORT.md  TEST_REPORT.md  app.py  config.json  fineTring.py  package-lock.json  pyproject.toml  readme.md  requirements.txt  run_all_tests.sh  testBackEnd.py  testfineTring.py  training_data.jsonl
backend/: .env.example  .gitignore  assessment_data.json  config.py  exceptions.py  main.py  requirements.txt  run_all_tests.py  testBackEnd.py  test_config.py  test_flask_app.py  test_integration.py  validators.py
backend/app/: __init__.py  routes.py
backend/auth/: authmanager.py
backend/chatbot/: chatbot.py
backend/classes/: app.py  authmanager.py  chatbot.py  custom_logger.py  main.py
backend/classes/templates/: admin.html
backend/gpt_tring/: apimodel.py
backend/logger/: __init__.py  custom_logger.py  session_logger.py
backend/templates/: sessions.html
classes/: app.py  authmanager.py  chatbot.py  custom_logger.py  logger.py  main.py
frontend/: integration.test.js  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  package.test.json  run_frontend_tests.py  tailwind.config.mjs
frontend/app/: layout.js  page.js  page.test.js
frontend/app/[role]/: page.extended.test.js  page.js  page.test.js
frontend/app/components/: ChooseAvatar.js  (+1 more)
frontend/public/: training_data.json
gpt_tuning/: apimodel.py  fineTring.py  secretFlask.py  testBackEnd.py
static/js/: scripts.js
templates/: chat.html  home.html
(+3 files in other folders)
